feat: move to the maintenance page on the client application component

--- a/helm/charts/amplication/values-prod.yaml
+++ b/helm/charts/amplication/values-prod.yaml
@@ -18,6 +18,9 @@ postgres:
   install: false
 
 amplication-client:
+  image:
+    repository: 407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-maintenance
+    tag: "latest"
   service:
     hostname: app.prod.amplication-dev.com
     certificatearn: arn:aws:acm:us-east-1:407256539111:certificate/7cf536df-6c61-4f76-bf3c-fd8f4e021721
