--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "deepdash": "^5.3.9",
     "deepdash-es": "^5.3.9",
     "dir-compare": "^4.0.0",
-    "dockerode": "^3.3.4",
     "dotenv": "^16.0.0",
     "download": "^8.0.0",
     "eventsource": "^2.0.2",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "fs-extra": "^9.1.0",
     "get-stream": "^6.0.1",
@@ -161,6 +161,7 @@
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
     "@nrwl/eslint-plugin-nx": "15.3.3",
+    "@nrwl/express": "15.3.3",
     "@nrwl/jest": "15.3.3",
     "@nrwl/js": "15.3.3",
     "@nrwl/linter": "15.3.3",
@@ -181,7 +182,7 @@
     "@types/dockerode": "^2.5.34",
     "@types/download": "^8.0.2",
     "@types/eventsource": "^1.1.9",
-    "@types/express": "^4.17.14",
+    "@types/express": "4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^7.2.0",
     "@types/graphql-type-json": "^0.3.2",
@@ -218,6 +219,7 @@
     "babel-jest": "^27.1.4",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.4.0",
+    "dockerode": "^3.3.4",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-lerna": "^2.0.0",
