feat(build-manager): update DSG_RUNNER_URL

--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -12,7 +12,7 @@ CODE_GENERATION_FAILURE_TOPIC="build.internal.code-generation.failure.1"
 
 DSG_LOG_TOPIC="build.internal.dsg-log.1"
 
-DSG_RUNNER_URL="http://localhost:12000/example"
+DSG_RUNNER_URL="http://localhost:8900/api/code-generate"
 
 BUILD_ARTIFACTS_FOLDER=/home/eugene/dsg-jobs
 RESOURCE_DATA_FILE_NAME=input.json
