feat(local-dsg-runner): remove unused properties from project json

--- a/packages/local-dsg-runner/project.json
+++ b/packages/local-dsg-runner/project.json
@@ -13,9 +13,7 @@
         "compiler": "tsc",
         "outputPath": "dist/packages/local-dsg-runner",
         "main": "packages/local-dsg-runner/src/main.ts",
-        "tsConfig": "packages/local-dsg-runner/tsconfig.app.json",
-        "assets": ["packages/local-dsg-runner/src/assets"],
-        "webpackConfig": "packages/local-dsg-runner/webpack.config.js"
+        "tsConfig": "packages/local-dsg-runner/tsconfig.app.json"
       },
       "configurations": {
         "production": {
