fix(server): local configuration without billing

--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -56,5 +56,5 @@ KAFKA_CLIENT_ID='server-queue-client'
 KAFKA_GROUP_ID='main-server-group'
 KAFKA_REPOSITORY_PUSH_QUEUE='git.external.push.event.0'
 
-BILLING_ENABLED=true
+BILLING_ENABLED=false
 BILLING_API_KEY="123456"
