chore(ci): add ci and release workflows to improve devex and deployment on new infrastructure (#4938)
* chore(ci): disable old ci workflow

* chore(ci): add new ci and release flow to support new infra

* chore(ci): add param to force nx all in ci

* chore(ci): fix code style

* chore(ci): fix syntax for release workflow

* chore(ci): split ci and security testing workflows

* chore(ci): add cache layer for node_modules

* chore(ci): refactor ci workflow to leverage a template

* chore(ci): rename security ci template to improve consistency

Co-authored-by: Levi van Noort <levivannoort@users.noreply.github.com>

* chore(ci): add new ci deployment template

Co-authored-by: Levi van Noort <levivannoort@users.noreply.github.com>

* chore(ci): update release workflow to use deployment template

Co-authored-by: Levi van Noort <levivannoort@users.noreply.github.com>

* chore: further enforce consistency and add correct workflow call

* chore: use default string comparison operator instead of arithmetic comparison

* chore: standardize bash if statement

* chore(ci): fix ci template syntax

* chore(ci): fix release template syntax

* chore(ci): update release workflow to use github environments instead of custom logic

Co-authored-by: Levi van Noort <levivannoort@users.noreply.github.com>

* chore(ci): fix ci workflow template to use nx format check instead of package script

* chore(ci): fix affected project workflow logic by removing the ci template

* chore(ci): update checkout action version

* chore(ci): fix release workflow deploy

* chore(ci): allow ci workflow to run on push to next branch

* chore(ci): remove temporary branch filter

* chore(ci): add github environment urls

* revert: chore(ci): disable old ci workflow

Co-authored-by: Levi van Noort <levivannoort@users.noreply.github.com>
Co-authored-by: levivannoort <levivnoort@gmail.com>

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       nx-base:
         type: string
-        description: Commit SHA, branch or tag name used by Nx in the affected jobs. 
+        description: Commit SHA, branch or tag name used by Nx in the affected jobs.
         required: true
         default: next
   pull_request:
@@ -170,8 +170,8 @@ jobs:
     needs: ci
     uses: ./.github/workflows/vulnerability-scan.template.yaml
     with:
-      scan-type: 'fs'
-      format: 'sarif'
+      scan-type: "fs"
+      format: "sarif"
       exit-code: 0
       publish: true
 
@@ -180,16 +180,16 @@ jobs:
     needs: ci
     uses: ./.github/workflows/vulnerability-scan.template.yaml
     with:
-      scan-type: 'config'
-      format: 'sarif'
+      scan-type: "config"
+      format: "sarif"
       exit-code: 0
       publish: true
 
   deploy:
-    if:  ${{ github.head_ref == 'next' }}
+    if: ${{ github.head_ref == 'next' }}
     needs: dockerize
     uses: ./.github/workflows/deploy.yml
     with:
-     target-env: ${{ github.head_ref }}
-     confirm-env: ${{ github.head_ref }}
+      target-env: ${{ github.head_ref }}
+      confirm-env: ${{ github.head_ref }}
     secrets: inherit
