--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   file-system-scan:
     name: Vulnerability scanning - File system
-    uses: ./.github/workflows/security.template.yaml
+    uses: ./.github/workflows/security.template.yml
     with:
       scan-type: 'fs'
       format: 'sarif'
@@ -26,7 +26,7 @@ jobs:
 
   config-scan:
     name: Vulnerability scanning - Config
-    uses: ./.github/workflows/security.template.yaml
+    uses: ./.github/workflows/security.template.yml
     with:
       scan-type: 'config'
       format: 'sarif'
