--- a/libs/data-service-generator/package.json
+++ b/libs/data-service-generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@amplication/data-service-generator",
-  "version": "1.1.10",
+  "version": "1.1.11-beta.0",
   "private": false,
   "main": "./src/index.js",
   "dependencies": {
