--- a/packages/amplication-data-service-generator-runner/project.json
+++ b/packages/amplication-data-service-generator-runner/project.json
@@ -58,7 +58,7 @@
       },
       "dependsOn": ["generate-example-input-json"]
     },
-    "docker-build": {
+    "docker:build": {
       "executor": "@nx-tools/nx-docker:build",
       "dependsOn": ["build"],
       "options": {
