--- a/packages/amplication-prisma-db/.env
+++ b/packages/amplication-prisma-db/.env
@@ -4,3 +4,4 @@ POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication
+PRISMA_CLIENT_OUTPUT_PATH= generated-prisma-client
