Return the DSG to the tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,9 @@
       "@amplication/data-service-generator": [
         "libs/data-service-generator/src/index.ts"
       ],
+      "@amplication/data-service-generator/*": [
+        "libs/data-service-generator/src/*"
+      ],
       "@amplication/design-system": [
         "packages/amplication-design-system/src/index.ts"
       ],
