feat(local-dsg-runner): put topic valuse in quots

--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -6,7 +6,7 @@ KAFKA_CLIENT_ID='build-manager'
 KAFKA_GROUP_ID='build-manager'
 
 # Kafka Topics
-CREATE_PR_REQUEST_TOPIC=git.internal.create-pr.request.2
+CREATE_PR_REQUEST_TOPIC="git.internal.create-pr.request.2"
 CODE_GENERATION_REQUEST_TOPIC="build.internal.code-generation.request.1"
 CODE_GENERATION_SUCCESS_TOPIC="build.internal.code-generation.success.1"
 CODE_GENERATION_FAILURE_TOPIC="build.internal.code-generation.failure.1"
