fix(storage-gateway) add BUILD_ARTIFACTS_BASE_FOLDER env variable

--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -15,3 +15,4 @@ KAFKA_GROUP_ID='storage-server-group'
 KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
 
 BUILD_OUTPUT_FOLDER=output
+BUILD_ARTIFACTS_BASE_FOLDER=".amplication/build-artifacts"
