--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -6,16 +6,21 @@ KAFKA_CLIENT_ID='build-manager'
 KAFKA_GROUP_ID='build-manager'
 
 # Kafka Topics
+CREATE_PR_REQUEST_TOPIC="git.internal.create-pr.request.2"
 CODE_GENERATION_REQUEST_TOPIC="build.internal.code-generation.request.1"
 CODE_GENERATION_SUCCESS_TOPIC="build.internal.code-generation.success.1"
 CODE_GENERATION_FAILURE_TOPIC="build.internal.code-generation.failure.1"
 
 DSG_LOG_TOPIC="build.internal.dsg-log.1"
 
-DSG_RUNNER_URL="http://localhost:12000/example"
+DSG_RUNNER_URL="http://localhost:8900/api/code-generate"
 
-BUILD_ARTIFACTS_FOLDER=/home/eugene/dsg-jobs
+BUILD_ARTIFACTS_BASE_FOLDER=".amplication/build-artifacts"
 RESOURCE_DATA_FILE_NAME=input.json
+BUILD_ARTIFACTS_CODE_FOLDER=code
+
+DSG_JOBS_BASE_FOLDER=".amplication/dsg-jobs"
+DSG_JOBS_CODE_FOLDER=code
 
 # Default env
 DSG_JOBS_RESOURCE_DATA_FILE="input.json"
