--- a/libs/data-service-generator/package.json
+++ b/libs/data-service-generator/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@amplication/data-service-generator",
-  "version": "1.1.11-beta.5",
+  "version": "1.1.12",
   "private": false,
   "main": "./src/index.js",
   "dependencies": {
     "@amplication/code-gen-utils": "^0.0.3",
-    "@amplication/plugin-db-postgres": "^1.2.1",
+    "@amplication/plugin-db-postgres": "1.1.7",
     "@amplication/plugin-auth-basic": "^1.2.2",
     "@amplication/plugin-auth-jwt": "^1.1.2",
     "@amplication/plugin-broker-kafka": "^0.2.2",
