chore(ci): stop nx to fail release job if a project doesn't have docker:build target (#5012)
* chore(ci): stop nx to fail release job if a project doesn't have docker:build target

* chore(ci): improve messaging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 name: Release
-run-name: Release ${{ github.event.workflow_run.head_branch }} by workflow ${{ github.event.workflow_run.id }}
+run-name: Release ${{ github.event.workflow_run.head_branch }} by workflow ${{ github.event.workflow_run.id }} - commit ${{ github.event.workflow_run.head_sha }} 
 concurrency: ${{ github.event.workflow_run.head_branch }}
 
 on:
@@ -71,7 +71,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.workflow_run.head_branch }}
+          ref: ${{ github.event.workflow_run.head_sha }}
           fetch-depth: 0
 
       - uses: actions/setup-node@v3
@@ -133,7 +133,7 @@ jobs:
 
       # https://www.npmjs.com/package/@nx-tools/nx-docker
       - name: Dockerize
-        run: npx nx docker:build ${{ matrix.project }}
+        run: npx nx run-many --target=docker:build --projects=${{ matrix.project }}
         env:
           INPUT_TAGS: ${{ steps.meta.outputs.tags }}
           INPUT_PUSH: true
