feat(kafka): Add support for kafka message serializers (#4692)
* refactor(kafka): create new core kafka library

* feat: create json kafka serialiser

* prepare avro

* refactor: rename kafka serialisers

* feat(nest-kafka): add new nestjs custom pipe to desirialise kafka messages

* fix: add additional tests to cover json and string serialisation

* chore: add new test for serialiser

* chore(kafka): fix import

* fix(kafka): import typo

* chore(kafka): add nestjs pipe for current (nestjs v8) kafka message

* chore: add logic to cover deserialisation only if needed

* chore: update pipe classes and add nestjs module

* doc: add documentation to nestjs kafka lib

* fix: import casing

* feat: add kafkaProducer service and module

* fix: lint

* refactor: modules and add documentation

* fix(kafka): unknown import

* chore: remove unused code

* chore(kafka-lib): add warn when json serialiser fails to deserialise an object

* refactor(kafka): kafka message types and json serialiser

* chore: add leftover files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -43,6 +43,7 @@
       ],
       "@amplication/prisma-db": ["packages/amplication-prisma-db/src/index.ts"],
       "@amplication/prisma-db/*": ["packages/amplication-prisma-db/src/*"],
+      "@amplication/util/kafka": ["libs/util/kafka/src/index.ts"],
       "@amplication/util/nestjs/kafka": ["libs/util/nestjs/kafka/src/index.ts"],
       "@primer/react/deprecated": ["node_modules/@primer/react/lib/deprecated"]
     }
