--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,6 @@ infra/tilt/.temp/**
 .env.local
 
 src/schema.graphql
-packages/amplication-data-service-generator/.tsbuildinfo
 **/prisma/generated-prisma-client
 libs/data-service-generator/.tsbuildinfo
+.tsbuildinfo
