refactor(ci): CI CD workflows to increase visibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Continuous Integration
+concurrency: ${{ github.ref }}
 
 on:
   workflow_dispatch:
@@ -28,17 +29,17 @@ on:
     paths-ignore:
       - "**/*.md"
       - ".all-contributorsrc"
+env:
+  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
+  NX_BRANCH: ${{ github.head_ref || github.ref_name }} 
+  NX_FORCE_ALL: ${{ fromJSON('["", "--all"]')[ inputs.nx-force-all ] }}  # This relies on type coercion, an implicit cast from boolean true to 1 or false to 0, which is then used as array index.
+  NX_SKIP_NX_CACHE: ${{ inputs.nx-skip-cache || false }}
+  BASE: ${{ github.base_ref || inputs.nx-base || github.event.repository.default_branch }}
 
 jobs:
   ci:
     name: Continuous Integration
     runs-on: ubuntu-20.04
-    env:
-      NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
-      NX_BRANCH: ${{ github.head_ref || github.ref_name }} 
-      NX_FORCE_ALL: ${{ fromJSON('["", "--all"]')[ inputs.nx-force-all ] }}  # This relies on type coercion, an implicit cast from boolean true to 1 or false to 0, which is then used as array index.
-      NX_SKIP_NX_CACHE: ${{ inputs.nx-skip-cache || false }}
-      BASE: ${{ github.base_ref || inputs.nx-base || github.event.repository.default_branch }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -95,17 +96,27 @@ jobs:
         run: |
           npx nx affected --target=build --parallel=3 $NX_FORCE_ALL
           npx nx affected --target=postbuild --parallel=3 $NX_FORCE_ALL
+  
+  nx:
+    name: Nx
+    needs: ci
+    uses: ./.github/workflows/nx-affected.template.yml
+    with:
+      nx-head: ${{ github.head_ref || github.ref_name }}
+      nx-base: ${{ github.base_ref || inputs.nx-base || github.event.repository.default_branch }}
+      nx-skip-cache: ${{ inputs.nx-force-all || false }}  # This relies on type coercion, an implicit cast from boolean true to 1 or false to 0, which is then used as array index.
+      nx-force-all: ${{ inputs.nx-skip-cache || false }}
 
-      - name: Set Affected
-        id: set-affected
-        run: |
-          export AFFECTED_PROJECTS=$(npx nx print-affected --type=app $NX_FORCE_ALL | jq -c .projects)
-          echo affected projects: $AFFECTED_PROJECTS
-          echo affected=$AFFECTED_PROJECTS >> affected-projects
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: affected-projects
-          path: affected-projects
-          if-no-files-found: error
+  release:
+    name: Release
+    needs: nx
+    uses: ./.github/workflows/release.template.yml
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'next' }}
+    with:
+      branch: ${{ github.ref_name }}
+      affected-apps: ${{ needs.nx.outputs.affected-apps }}
+      affected-lib: ${{ needs.nx.outputs.affected-lib }} 
+      affected-dockerable: ${{ needs.nx.outputs.affected-dockerable }} 
+      affected-deployable: ${{ needs.nx.outputs.affected-deployable }} 
+    secrets:
+      nx-cloud-access-token: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
