--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "nx clear-cache",
     "graphql-codegen": "graphql-codegen",
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up",
+    "docker:dev:cleanup": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose down",
     "db:migrate:deploy": "nx run-many --target=db:migrate:deploy",
     "prepare": "husky install",
     "precommit": "lint-staged --relative",
