--- a/packages/amplication-plugin-api/tsconfig.json
+++ b/packages/amplication-plugin-api/tsconfig.json
@@ -6,11 +6,7 @@
     "resolveJsonModule": true
   },
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.spec.json" }
   ]
 }
