fixed docker file

--- a/packages/amplication-plugin-api/Dockerfile
+++ b/packages/amplication-plugin-api/Dockerfile
@@ -7,6 +7,11 @@ RUN npm install --omit-dev
 
 COPY ./dist/packages/amplication-plugin-api .
 
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S amplication-plugin-api -u 1001
+RUN chown -R amplication-plugin-api:nodejs /workspace/packages/amplication-plugin-api
+USER amplication-plugin-api
+
 ENV PORT=3005
 EXPOSE $PORT
 
