chore: align non-root user setup with planned convention

--- a/packages/amplication-plugin-api/Dockerfile
+++ b/packages/amplication-plugin-api/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:18.12.1-slim AS base
 
 ARG user=amplication-plugin-api
-ARG group=nodejs
 ARG uid=1001
-ARG gid=1001
+ARG gid=$uid
 
 WORKDIR /workspace/packages/${user}
 
@@ -12,11 +11,11 @@ RUN npm install --omit-dev
 
 COPY ./dist/packages/${user} .
 
-RUN groupadd -g ${gid} ${group}
-RUN useradd -u ${uid} -g ${group} -s /bin/sh -m ${user}
-RUN chown -R ${uid}:${group}  /workspace/packages/${user}
+RUN groupadd --gid ${gid} ${user}
+RUN useradd --uid ${uid} --gid ${gid} -m ${user}
+RUN chown -R ${uid}:${gid} /workspace/packages/${user}
 
-USER ${uid}:${gid}
+USER ${user}
 
 ENV PORT=3005
 EXPOSE $PORT
