fix: change ADD command to COPY command per security scanning alert 27

--- a/packages/amplication-prisma-db/prisma/Dockerfile
+++ b/packages/amplication-prisma-db/prisma/Dockerfile
@@ -6,6 +6,6 @@ RUN uname -a
 RUN npm install -g @prisma/cli
 
 # Copy schema and migration folder
-ADD ./ ./prisma/
+COPY ./ ./prisma/
 
 CMD [ "prisma", "migrate", "up", "--experimental"]
