--- a/packages/amplication-build-manager/Dockerfile
+++ b/packages/amplication-build-manager/Dockerfile
@@ -1,12 +1,21 @@
-FROM node:18.12.1-alpine AS base
+FROM node:18.13.0-slim AS base
 
-WORKDIR /app
+ARG user=build-manager
+ARG uid=1001
+ARG gid=$uid
 
-COPY ./dist/packages/amplication-build-manager/package.json .
+WORKDIR /workspace/packages/${user}
 
-RUN npm i --omit=dev
+COPY ./dist/packages/amplication-${user}/package*.json .
+RUN npm install --omit-dev
 
-COPY ./dist/packages/amplication-build-manager .
+COPY ./dist/packages/amplication-${user} .
+
+RUN groupadd --gid ${gid} ${user}
+RUN useradd --uid ${uid} --gid ${gid} -m ${user}
+RUN chown -R ${uid}:${gid} /workspace/packages/${user}
+
+USER ${user}
 
 ENV PORT=3333
 EXPOSE $PORT
