--- a/packages/amplication-server/Dockerfile
+++ b/packages/amplication-server/Dockerfile
@@ -1,18 +1,24 @@
-FROM node:18.12.1-slim AS base
+FROM node:18.13.0-slim AS base
 
-# Required to run Prisma on ARM64 machines
-# https://github.com/prisma/prisma/issues/861#issuecomment-881992292
-RUN apt-get update
-RUN apt-get install -y openssl
+ARG user=server
+ARG uid=1001
+ARG gid=$uid
 
-WORKDIR /app
+# Required to run Prisma on ARM64 machine: https://github.com/prisma/prisma/issues/861#issuecomment-881992292
+RUN apt-get update && apt-get install -y openssl
 
-COPY ./dist/packages/amplication-server/package*.json ./
+WORKDIR /workspace/packages/${user}
 
-RUN npm i --omit=dev
+COPY ./dist/packages/amplication-${user}/package*.json .
+RUN npm install --omit-dev
 
-COPY ./dist/packages/amplication-server .
+COPY ./dist/packages/amplication-${user} .
 
+RUN groupadd --gid ${gid} ${user}
+RUN useradd --uid ${uid} --gid ${gid} -m ${user}
+RUN chown -R ${uid}:${gid} /workspace/packages/${user}
+
+USER ${user}
 
 ENV PORT=3333
 EXPOSE $PORT
