--- a/ee/packages/amplication-git-pull-service/Dockerfile
+++ b/ee/packages/amplication-git-pull-service/Dockerfile
@@ -1,12 +1,21 @@
-FROM node:18.12.1 AS base
+FROM node:18.13.0-slim AS base
 
-WORKDIR /app
+ARG user=git-pull-service
+ARG uid=1001
+ARG gid=$uid
 
-COPY ./dist/ee/packages/amplication-git-pull-service/package.json .
+WORKDIR /workspace/packages/${user}
 
-RUN npm i --omit=dev
+COPY ./dist/ee/packages/amplication-${user}/package*.json .
+RUN npm install --omit-dev
 
-COPY ./dist/ee/packages/amplication-git-pull-service .
+COPY ./dist/ee/packages/amplication-${user} .
+
+RUN groupadd --gid ${gid} ${user}
+RUN useradd --uid ${uid} --gid ${gid} -m ${user}
+RUN chown -R ${uid}:${gid} /workspace/packages/${user}
+
+USER ${user}
 
 ENV PORT=3333
 EXPOSE $PORT
